WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292777
[visionOS] Spatial HLS playback not staying in spatial mode while seeking
https://bugs.webkit.org/show_bug.cgi?id=292777
Summary
[visionOS] Spatial HLS playback not staying in spatial mode while seeking
Jer Noble
Reported
2025-05-09 09:20:08 PDT
[visionOS] Spatial HLS playback not staying in spatial mode while seeking
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-05-09 09:20:09 PDT
<
rdar://problem/146978728
>
Jer Noble
Comment 2
2025-05-09 09:26:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45167
EWS
Comment 3
2025-05-09 13:14:36 PDT
Committed
294728@main
(7eff951ac675): <
https://commits.webkit.org/294728@main
> Reviewed commits have been landed. Closing PR #45167 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug