[visionOS] Spatial HLS playback not staying in spatial mode while seeking rdar://146978728 https://bugs.webkit.org/show_bug.cgi?id=292777

Reviewed by Eric Carlson.

In 294687@main, we handled the case where a AVAssetTrack would suddenly have a nil
formatDescriptions property during seeking, but a remaining problem is that the
track itself is removed and a new one added. Depending on timing, a "removetrack"
event can be fired in between the old track being removed and the new one added.
In this liminal state, PlaybackSessionModelMediaElement will clear its cached
spatial and projection metadata values, and notify its clients, who subsequently
reconfigure the LinearMediaPlayer to drop out of spatial mode.

Instead, skip updating spatial and projection metadata when there is no currently
selected video track. This covers not just the case where the tracks are updated
through HLS, but also MSE-based players like HLS.js.

* Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.mm:
(WebCore::PlaybackSessionModelMediaElement::maybeUpdateVideoMetadata):

Canonical link: https://commits.webkit.org/294728@main